@@ -288,20 +288,23 @@
         [{"LD_LIBRARY_PATH", "api/c/lib/"},
          {"DYLD_LIBRARY_PATH", "api/c/lib/"}],
         none, tcp, default,
-        5000, 5000, 5000, [api], undefined, 1, 1, 5, 300, []},
+        5000, 5000, 5000, [api], undefined, 1, 1, 5, 300,
+        [{request_timeout_adjustment, true}]},
     {external,
         "/tests/http_req/",
         "@RUBY@",
         "tests/http_req/http_req.rb", [],
         none, tcp, default,
-        5000, 5000, 5000, [api], undefined, 1, 1, 5, 300, []},
+        5000, 5000, 5000, [api], undefined, 1, 1, 5, 300,
+        [{request_timeout_adjustment, true}]},
     {external,
         "/tests/http_req/",
         "@PYTHON@",
         "tests/http_req/http_req.py",
         [],
         none, tcp, default,
-        5000, 5000, 5000, [api], undefined, 1, 1, 5, 300, []},
+        5000, 5000, 5000, [api], undefined, 1, 1, 5, 300,
+        [{request_timeout_adjustment, true}]},
     {external,
         "/tests/http_req/",
         "@PYTHON@",
@@ -310,7 +313,8 @@
         none, tcp, default,
         5000, 5000, 5000, [api], undefined,
         1.0, 1, 5, 300,
-        [{count_process_dynamic,
+        [{request_timeout_adjustment, true},
+         {count_process_dynamic,
           [{rate_request_max, 1.1},
            {rate_request_min, 0.9},
            {count_max, 4.0},
@@ -320,7 +324,8 @@
         "@JAVA@",
         "-jar tests/http_req/jar/http_req.jar", [],
         none, tcp, default,
-        5000, 5000, 5000, [api], undefined, 1, 1, 5, 300, []},
+        5000, 5000, 5000, [api], undefined, 1, 1, 5, 300,
+        [{request_timeout_adjustment, true}]},
     {internal,
         "/tests/http_req/",
         cloudi_service_http_req,
@@ -328,7 +333,8 @@
         none,
         4294967195, 4294967195, 4294967195, % test limits
         [api], undefined, 1.0, 5, 300,
-        [{hibernate,
+        [{request_timeout_adjustment, true},
+         {hibernate,
           [{rate_request_min, 0.9}]},
          {count_process_dynamic,
           [{rate_request_max, 1.1},
@@ -342,7 +348,8 @@
         none,
         101, 101, 101, % test limits
         [api], undefined, 1.0, 5, 300,
-        [{hibernate,
+        [{request_timeout_adjustment, true},
+         {hibernate,
           [{rate_request_min, 0.9}]},
          {count_process_dynamic,
           [{rate_request_max, 1.1},
